# tree-sitter-polytope

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file.poly  go.mod  grammar.js  log.html  package.json  polytope  pyproject.toml  setup.py  tree-sitter.json
.bsp/: sbt.json
bindings/c/: tree-sitter-polytope-parser.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_polytope_parser/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPolytopeParser/: polytope_parser.h
bindings/swift/TreeSitterPolytopeParserTests/: TreeSitterPolytopeParserTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: expr_and_stmt.txt  restrictions.txt
