[package]
name = "tree-sitter-polytope-parser"
description = "Parser of Polytope"
version = "0.1.0"
authors = ["Jungyeom Kim <kimjg1199lock@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "polytope-parser"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/kimjg1119/polytope-parser"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
